--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
-<body>
-<h1>一个新的领域</h1>
-<p>Hello 这是我的新的个人页</p>
-<p>希望你们玩的开心</p>
-<a href="www.baidu.com">给你一个全知全能的链接。</a>
+<body style="background-color:#909090">
+
+<h1 style="text-align:center">一个新的领域</h1>
+<p style="text-align:center">Hello 这是我的新的个人页</p>
+<p style="text-align:center">希望你们玩的开心</p>
+<br/>
+<a href="www.baidu.com" >给你一个全知全能的链接。</a>
   
 </body>
 </html>
