--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p style="text-align:center">Hello 这是我的新的个人页</p>
 <p style="text-align:center">希望你们玩的开心</p>
 <br/>
-<a href="www.baidu.com" >给你一个全知全能的链接。</a>
+<a href="https://www.baidu.com" >给你一个全知全能的链接。</a>
   
 </body>
 </html>
