--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <body style="background-color:#909090">
+<title>SevenRy 我的个人站</title>
 
 <h1 style="text-align:center">一个新的领域</h1>
 <p style="text-align:center">Hello 这是我的新的个人页</p>
 <p style="text-align:center">希望你们玩的开心</p>
 <br/>
 <a href="https://www.baidu.com" target="_blank">给你一个全知全能的链接。</a>
-<title>scratch.py</title>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css">
   
