--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
-<html>
-<body style="background-color:#909090">
+<!DOCTYPE html>
+<html lang="ch">
+<head>
+<style>
+ #header{
+    background-color:#000000;
+    background:#FFFFFF;
+    textalign:center;
+    padding:5px
+    
+</style>
 <title>SevenRy 我的个人站</title>
+<base herf="https://www.sevenry.com/">
+<base herf="_blank"
+</head>
+  
+<body>
+<div id="header">
+<h1>Welcome</h1>
 
-<h1 style="text-align:center">一个新的领域</h1>
+<p style="text-align:center">一个新的领域</p>
 <p style="text-align:center">Hello 这是我的新的个人页</p>
 <p style="text-align:center">希望你们玩的开心</p>
 <br/>
+<ul>
 <a href="https://www.baidu.com" target="_blank">给你一个全知全能的链接。</a>
+ </ul>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css">
