--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="ch">
 <head>
 <style>
- #header{
-    background-color:#000000;
-    background:#FFFFFF;
-    textalign:center;
+ #header {
+    background-color:#FFFFFF;
+    background:#000000;
+    text-align:center;
     padding:5px
+ }
     
 </style>
 <title>SevenRy 我的个人站</title>
