--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
 <style>
  #header {
-    background-color:#FFFFFF;
-    background:#000000;
-    text-align:center;
-    padding:5px
+   background-color:#FFFFFF;
+   color:#000000;
+   text-align:center;
+   padding:5px
  }
-    
+ #nev {
+   lineheight:30px;
+   background-color:#909090;
+   color:#FFFFFF;
+   height:300px;
+   width:50px;
+   float:left;
+   padding:5px;
+ }
+   
 </style>
 <title>SevenRy 我的个人站</title>
 <base herf="https://www.sevenry.com/">
