--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <style>
  #header {
-   background-color:#FFFFFF;
-   color:#000000;
+   background-color:#000000;
+   color:#FFFFFF;
    text-align:center;
    padding:5px
  }
@@ -27,6 +27,7 @@
 <body>
 <div id="header">
 <h1>Welcome</h1>
+</div>
 
 <p style="text-align:center">一个新的领域</p>
 <p style="text-align:center">Hello 这是我的新的个人页</p>
