--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    background-color:#000000;
    color:#FFFFFF;
    text-align:center;
-   padding:5px
+   padding:600px
  }
  #nev {
    lineheight:30px;
@@ -17,8 +17,21 @@
    float:left;
    padding:5px;
  }
-   
+ #section {
+    width:350px;
+    float:left;
+    padding:10px;	 	 
+}
+#footer {
+    background-color:black;
+    color:white;
+    clear:both;
+    text-align:center;
+   padding:15px;	 	 
+
 </style>
+</head>
+ 
 <title>SevenRy 我的个人站</title>
 <base herf="https://www.sevenry.com/">
 <base herf="_blank"
