--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
    background-color:#000000;
    color:#FFFFFF;
    text-align:center;
-   padding:600px
+   padding:300px
  }
  #nev {
    lineheight:30px;
    background-color:#909090;
    color:#FFFFFF;
    height:300px;
-   width:50px;
+   width:150px;
    float:left;
    padding:5px;
  }
@@ -42,16 +42,22 @@
 <h1>Welcome</h1>
 </div>
 
-<p style="text-align:center">一个新的领域</p>
-<p style="text-align:center">Hello 这是我的新的个人页</p>
-<p style="text-align:center">希望你们玩的开心</p>
-<br/>
+<div id="nev">
+<p>一个新的领域</p>
+<p>Hello 这是我的新的个人页</p>
+<p>希望你们玩的开心</p>
+</div>
+
+<div id="section">
 <ul>
 <a href="https://www.baidu.com" target="_blank">给你一个全知全能的链接。</a>
- </ul>
+</ul>
+</div>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<style type="text/css">
+<div id="footer">
+<p>下次见<p>
+</div>
+
   
 </body>
 </html>
