--- a/index.html
+++ b/index.html
@@ -1,45 +1,82 @@
 <!DOCTYPE html>
 <html lang="ch">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="font.css">
 <style>
  #header {
-   background-color:#000000;
+   background-color: #000000;
    color:#FFFFFF;
-   text-align:center;
-   padding:300px
+   text-align: center;
+   height: 450px;
+   padding: 5%;
+  
  }
+ .navbar {
+      background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
+      padding: 10px;
+      text-align: center;
+      color: white;
+      position: relative;
+ }
+      
+ .navbar a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+ }
+
  #nev {
    lineheight:30px;
    background-color:#909090;
    color:#FFFFFF;
    height:300px;
-   width:150px;
+   width:100px;
    float:left;
-   padding:5px;
+   padding:0px;
  }
  #section {
     width:350px;
     float:left;
     padding:10px;	 	 
 }
+#cities {
+  background-color: #000000;
+  color: #FFFFFF;
+  margin: 20px;
+  padding: 20px;
+}
 #footer {
     background-color:black;
     color:white;
     clear:both;
     text-align:center;
-   padding:15px;	 	 
+   padding:15px;	 
+}	 
+
 
 </style>
-</head>
  
 <title>SevenRy 我的个人站</title>
+<link rel="shortcut icon" href="sevenry.ico"/>
 <base herf="https://www.sevenry.com/">
-<base herf="_blank"
+<base herf="_blank">
 </head>
   
 <body>
+
+<div class="navbar">
+  <h1>
+    <a href="https://www.sevenry.com" style="text-decoration: none;color: #FFFFFF;" align="left"><img src="image\logo.png" width="48px" height="48px" align="center"> Sevenry</a>
+    <a href="index.html">Home</a>
+    <a href="">Design</a>
+    <a href="">About</a>
+    <a href="">Contact</a>
+</div>
+
 <div id="header">
-<h1>Welcome</h1>
+  <h1>欢迎来到我的主页</h1>
 </div>
 
 <div id="nev">
@@ -50,7 +87,7 @@
 
 <div id="section">
 <ul>
-<a href="https://www.baidu.com" target="_blank">给你一个全知全能的链接。</a>
+<a href="" target="_blank">给你一个全知全能的链接。</a>
 </ul>
 </div>
 
