--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <div class="navbar">
   <h1>
-    <a href="https://www.sevenry.com" style="text-decoration: none;color: #FFFFFF;" align="left"><img src="image\logo.png" width="48px" height="48px" align="center"> Sevenry</a>
+    <a href="https://www.sevenry.com" style="text-decoration: none;color: #FFFFFF;" align="left"><img src=".\image\logo.png" width="48px" height="48px" align="center"> Sevenry</a>
     <a href="index.html">Home</a>
     <a href="">Design</a>
     <a href="">About</a>
