--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </style>
  
 <title>SevenRy 我的个人站</title>
-<link rel="shortcut icon" href="sevenry.ico"/>
+<link rel="shortcut icon" href="SevenR/sevenry.ico"/>
 <base herf="https://www.sevenry.com/">
 <base herf="_blank">
 </head>
