--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    background-color: #000000;
    color:#FFFFFF;
    text-align: center;
-   height: 450px;
+   height: 600px;
    padding: 5%;
   
  }
@@ -24,11 +24,11 @@
  .navbar a {
       color: white;
       text-decoration: none;
-      margin: 0 15px;
+      margin:15px;
  }
 
  #nev {
-   lineheight:30px;
+   lineheight:150px;
    background-color:#909090;
    color:#FFFFFF;
    height:300px;
@@ -92,7 +92,7 @@
 </div>
 
 <div id="footer">
-<p>下次见<p>
+<p>下次见</p>
 </div>
 
   
