--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    padding: 5%;
   
  }
- .navbar {
+ #navbar {
       background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
       padding: 10px;
       text-align: center;
@@ -41,6 +41,11 @@
     float:left;
     padding:10px;	 	 
 }
+  .section a {
+      color: white;
+      text-decoration: none;
+      margin:15px;
+ }
 #cities {
   background-color: #000000;
   color: #FFFFFF;
