--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    padding: 5%;
   
  }
- #navbar {
+ .navbar {
       background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
       padding: 10px;
       text-align: center;
@@ -63,10 +63,10 @@
 
 </style>
  
-<title>SevenRy 我的个人站</title>
-<link rel="shortcut icon" href=".sevenry.ico"/>
-<base herf="https://www.sevenry.com/">
-<base herf="_blank">
+<title>SevenRy</title>
+<link rel="shortcut icon" href="\sevenry.ico"/>
+<!base herf="https://www.sevenry.com/">
+<!base herf="_blank">
 </head>
   
 <body>
@@ -77,7 +77,7 @@
 
 <div class="navbar">
   <h1>
-    <a href="https://www.sevenry.com" style="text-decoration: none;color: #FFFFFF;" align="left"><img src=".\image\logo.png" width="48px" height="48px" align="center"> Sevenry</a>
+    <a href="https://www.sevenry.com" style="text-decoration: none;color: #FFFFFF;" align="left"><img src=".\image\logo.png" width="48px" height="48px" align="center">Sevenry</a>
     <a href="index.html">Home</a>
     <a href="">Design</a>
     <a href="">About</a>
