--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <div id="section">
 <ul>
-<a href="" target="_blank">给你一个全知全能的链接。</a>
+<a href="https://www.baidu.com" target="_blank">给你一个全知全能的链接。</a>
 </ul>
 </div>
 
