--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </style>
  
 <title>SevenRy</title>
-<link rel="shortcut icon" href="\sevenry.ico"/>
+<link rel="shortcut icon" href=".\sevenry.ico"/>
 <!base herf="https://www.sevenry.com/">
 <!base herf="_blank">
 </head>
