--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     padding:10px;	 	 
 }
   .section a {
-      color: white;
+      color: #000000;
       text-decoration: none;
       margin:15px;
  }
@@ -90,7 +90,7 @@
 <p>希望你们玩的开心</p>
 </div>
 
-<div id="section">
+<div class="section">
 <ul>
 <a href="https://www.baidu.com" target="_blank">给你一个全知全能的链接。</a>
 </ul>
