--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
  }
 
  #nev {
-   lineheight:150px;
+   line-height:150px;
    background-color:#909090;
    color:#FFFFFF;
-   height:300px;
-   width:100px;
+   height:400px;
+   width:250px;
    float:left;
    padding:0px;
  }
  #section {
     width:350px;
     float:left;
-    padding:10px;	 	 
+    padding:10%;	 	 
 }
   .section a {
       color: #000000;
