--- a/off.html
+++ b/off.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>On anime</title>
+    <title>Off</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/on_anime/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/off/styles.css" type="text/css" rel="stylesheet"/>
     <style type="text/css">
 @font-face {
 
@@ -43,7 +43,7 @@
     <script src="resources/scripts/axure/math.js"></script>
     <script src="resources/scripts/axure/jquery.nicescroll.min.js"></script>
     <script src="data/document.js"></script>
-    <script src="files/on_anime/data.js"></script>
+    <script src="files/off/data.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
@@ -53,26 +53,26 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (图像) -->
-      <div id="u0" class="ax_default _图像">
-        <img id="u0_img" class="img " src="images/on_anime/u0.gif"/>
-        <div id="u0_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
       <!-- Unnamed (矩形) -->
-      <div id="u1" class="ax_default primary_button">
-        <div id="u1_div" class=""></div>
-        <div id="u1_text" class="text ">
+      <div id="u189" class="ax_default primary_button">
+        <div id="u189_div" class=""></div>
+        <div id="u189_text" class="text ">
           <p><span>电源键</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u2" class="ax_default _文本">
-        <div id="u2_div" class=""></div>
-        <div id="u2_text" class="text ">
+      <div id="u190" class="ax_default box_1">
+        <div id="u190_div" class=""></div>
+        <div id="u190_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u191" class="ax_default _文本">
+        <div id="u191_div" class=""></div>
+        <div id="u191_text" class="text ">
           <p><span>单击电源键后点击小按钮进入下一页</span></p><p><span>长按电源键后点击小按钮关机</span></p>
         </div>
       </div>
