--- a/display_3.html
+++ b/display_3.html
@@ -54,127 +54,91 @@
     <div id="base" class="">
 
       <!-- Unnamed (图像) -->
-      <div id="u150" class="ax_default _图像">
-        <img id="u150_img" class="img " src="images/display_3/u150.gif"/>
-        <div id="u150_text" class="text " style="display:none; visibility: hidden">
+      <div id="u155" class="ax_default _图像">
+        <img id="u155_img" class="img " src="images/display_3/u155.gif"/>
+        <div id="u155_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u151" class="ax_default box_3">
-        <div id="u151_div" class=""></div>
-        <div id="u151_text" class="text " style="display:none; visibility: hidden">
+      <div id="u156" class="ax_default box_3">
+        <div id="u156_div" class=""></div>
+        <div id="u156_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u152" class="ax_default label">
-        <div id="u152_div" class=""></div>
-        <div id="u152_text" class="text ">
+      <div id="u157" class="ax_default label">
+        <div id="u157_div" class=""></div>
+        <div id="u157_text" class="text ">
           <p><span>Display_3(安全页)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u153" class="ax_default label">
-        <div id="u153_div" class=""></div>
-        <div id="u153_text" class="text ">
+      <div id="u158" class="ax_default label">
+        <div id="u158_div" class=""></div>
+        <div id="u158_text" class="text ">
           <p><span>背景：纯黑色（#000000），呼吸灯同步Display1状态变化，透明度为Display 1的60%。</span></p><p><span>扫描光环周期为1.5s，在1s时衔接第二环，渐变色（#FFFFFF）不透明度23%~（#FFFFFF）不透明度0%。</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u154" class="ax_default label">
-        <div id="u154_div" class=""></div>
-        <div id="u154_text" class="text ">
+      <div id="u159" class="ax_default label">
+        <div id="u159_div" class=""></div>
+        <div id="u159_text" class="text ">
           <p><span>页面名称：Battery Health，浅灰色（#EBEBEB)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u155" class="ax_default" data-left="844" data-top="589" data-width="30" data-height="40">
+      <div id="u160" class="ax_default" data-left="844" data-top="589" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u156" class="ax_default marker">
-          <img id="u156_img" class="img " src="images/display_1/u9.svg"/>
-          <div id="u156_text" class="text " style="display:none; visibility: hidden">
+        <div id="u161" class="ax_default marker">
+          <img id="u161_img" class="img " src="images/display_1/u11.svg"/>
+          <div id="u161_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u157" class="ax_default label">
-          <div id="u157_div" class=""></div>
-          <div id="u157_text" class="text ">
+        <div id="u162" class="ax_default label">
+          <div id="u162_div" class=""></div>
+          <div id="u162_text" class="text ">
             <p><span>3</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u158" class="ax_default" data-left="844" data-top="652" data-width="30" data-height="40">
+      <div id="u163" class="ax_default" data-left="844" data-top="652" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u159" class="ax_default marker">
-          <img id="u159_img" class="img " src="images/display_1/u9.svg"/>
-          <div id="u159_text" class="text " style="display:none; visibility: hidden">
+        <div id="u164" class="ax_default marker">
+          <img id="u164_img" class="img " src="images/display_1/u11.svg"/>
+          <div id="u164_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u160" class="ax_default label">
-          <div id="u160_div" class=""></div>
-          <div id="u160_text" class="text ">
+        <div id="u165" class="ax_default label">
+          <div id="u165_div" class=""></div>
+          <div id="u165_text" class="text ">
             <p><span>4</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u161" class="ax_default" data-left="844" data-top="525" data-width="30" data-height="40">
-
-        <!-- Unnamed (水滴) -->
-        <div id="u162" class="ax_default marker">
-          <img id="u162_img" class="img " src="images/display_1/u9.svg"/>
-          <div id="u162_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u163" class="ax_default label">
-          <div id="u163_div" class=""></div>
-          <div id="u163_text" class="text ">
-            <p><span>2</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u164" class="ax_default label">
-        <div id="u164_div" class=""></div>
-        <div id="u164_text" class="text ">
-          <p><span>电池健康度：向上取整</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u165" class="ax_default label">
-        <div id="u165_div" class=""></div>
-        <div id="u165_text" class="text ">
-          <p><span>技术标识：SenseForce技术标识</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u166" class="ax_default" data-left="844" data-top="461" data-width="30" data-height="40">
+      <div id="u166" class="ax_default" data-left="844" data-top="525" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
         <div id="u167" class="ax_default marker">
-          <img id="u167_img" class="img " src="images/display_1/u9.svg"/>
+          <img id="u167_img" class="img " src="images/display_1/u11.svg"/>
           <div id="u167_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
@@ -184,96 +148,148 @@
         <div id="u168" class="ax_default label">
           <div id="u168_div" class=""></div>
           <div id="u168_text" class="text ">
+            <p><span>2</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u169" class="ax_default label">
+        <div id="u169_div" class=""></div>
+        <div id="u169_text" class="text ">
+          <p><span>电池健康度：向上取整</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u170" class="ax_default label">
+        <div id="u170_div" class=""></div>
+        <div id="u170_text" class="text ">
+          <p><span>技术标识：SenseForce技术标识</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u171" class="ax_default" data-left="844" data-top="461" data-width="30" data-height="40">
+
+        <!-- Unnamed (水滴) -->
+        <div id="u172" class="ax_default marker">
+          <img id="u172_img" class="img " src="images/display_1/u11.svg"/>
+          <div id="u172_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u173" class="ax_default label">
+          <div id="u173_div" class=""></div>
+          <div id="u173_text" class="text ">
             <p><span>1</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u169" class="ax_default" data-left="500" data-top="481" data-width="30" data-height="40">
+      <div id="u174" class="ax_default" data-left="500" data-top="481" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u170" class="ax_default marker">
-          <img id="u170_img" class="img " src="images/display_1/u9.svg"/>
-          <div id="u170_text" class="text " style="display:none; visibility: hidden">
+        <div id="u175" class="ax_default marker">
+          <img id="u175_img" class="img " src="images/display_1/u11.svg"/>
+          <div id="u175_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u171" class="ax_default label">
-          <div id="u171_div" class=""></div>
-          <div id="u171_text" class="text ">
+        <div id="u176" class="ax_default label">
+          <div id="u176_div" class=""></div>
+          <div id="u176_text" class="text ">
             <p><span>1</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (图像) -->
-      <div id="u172" class="ax_default _图像">
-        <img id="u172_img" class="img " src="images/display_3/u150.gif"/>
-        <div id="u172_text" class="text " style="display:none; visibility: hidden">
+      <div id="u177" class="ax_default _图像">
+        <img id="u177_img" class="img " src="images/display_3/u155.gif"/>
+        <div id="u177_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u173" class="ax_default" data-left="605" data-top="468" data-width="30" data-height="40">
+      <div id="u178" class="ax_default" data-left="605" data-top="468" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u174" class="ax_default marker">
-          <img id="u174_img" class="img " src="images/display_1/u9.svg"/>
-          <div id="u174_text" class="text " style="display:none; visibility: hidden">
+        <div id="u179" class="ax_default marker">
+          <img id="u179_img" class="img " src="images/display_1/u11.svg"/>
+          <div id="u179_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u175" class="ax_default label">
-          <div id="u175_div" class=""></div>
-          <div id="u175_text" class="text ">
+        <div id="u180" class="ax_default label">
+          <div id="u180_div" class=""></div>
+          <div id="u180_text" class="text ">
             <p><span>2</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u176" class="ax_default" data-left="656" data-top="554" data-width="30" data-height="40">
+      <div id="u181" class="ax_default" data-left="656" data-top="554" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u177" class="ax_default marker">
-          <img id="u177_img" class="img " src="images/display_1/u9.svg"/>
-          <div id="u177_text" class="text " style="display:none; visibility: hidden">
+        <div id="u182" class="ax_default marker">
+          <img id="u182_img" class="img " src="images/display_1/u11.svg"/>
+          <div id="u182_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u178" class="ax_default label">
-          <div id="u178_div" class=""></div>
-          <div id="u178_text" class="text ">
+        <div id="u183" class="ax_default label">
+          <div id="u183_div" class=""></div>
+          <div id="u183_text" class="text ">
             <p><span>3</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u179" class="ax_default" data-left="661" data-top="652" data-width="30" data-height="40">
+      <div id="u184" class="ax_default" data-left="661" data-top="652" data-width="30" data-height="40">
 
         <!-- Unnamed (水滴) -->
-        <div id="u180" class="ax_default marker">
-          <img id="u180_img" class="img " src="images/display_1/u9.svg"/>
-          <div id="u180_text" class="text " style="display:none; visibility: hidden">
+        <div id="u185" class="ax_default marker">
+          <img id="u185_img" class="img " src="images/display_1/u11.svg"/>
+          <div id="u185_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u181" class="ax_default label">
-          <div id="u181_div" class=""></div>
-          <div id="u181_text" class="text ">
+        <div id="u186" class="ax_default label">
+          <div id="u186_div" class=""></div>
+          <div id="u186_text" class="text ">
             <p><span>3</span></p>
           </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u187" class="ax_default primary_button">
+        <div id="u187_div" class=""></div>
+        <div id="u187_text" class="text ">
+          <p><span>电源键</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u188" class="ax_default _文本">
+        <div id="u188_div" class=""></div>
+        <div id="u188_text" class="text ">
+          <p><span>单击电源键后点击小按钮进入下一页</span></p><p><span>长按电源键后点击小按钮关机</span></p>
         </div>
       </div>
     </div>
