--- a/display_3.html
+++ b/display_3.html
@@ -289,7 +289,7 @@
       <div id="u188" class="ax_default _文本">
         <div id="u188_div" class=""></div>
         <div id="u188_text" class="text ">
-          <p><span>单击电源键后点击小按钮进入下一页</span></p><p><span>长按电源键后点击小按钮关机</span></p>
+          <p><span>单击电源键进入下一页</span></p><p><span>长按电源键关机</span></p>
         </div>
       </div>
     </div>
