--- a/on_anime.html
+++ b/on_anime.html
@@ -73,7 +73,7 @@
       <div id="u2" class="ax_default _文本">
         <div id="u2_div" class=""></div>
         <div id="u2_text" class="text ">
-          <p><span>单击电源键后点击小按钮进入下一页</span></p><p><span>长按电源键后点击小按钮关机</span></p>
+          <p><span>单击电源键进入下一页</span></p><p><span>长按电源键关机</span></p>
         </div>
       </div>
     </div>
