--- a/display_1_default.html
+++ b/display_1_default.html
@@ -281,22 +281,18 @@
         </div>
       </div>
 
-      <!-- Unnamed (动态面板) -->
-      <div id="u43" class="ax_default">
-        <div id="u43_state0" class="panel_state" data-label="状态1" style="">
-          <div id="u43_state0_content" class="panel_state_content">
-
-            <!-- Unnamed (图像) -->
-            <div id="u44" class="ax_default _图像">
-              <img id="u44_img" class="img " src="images/display_1_default/u44.png"/>
-              <div id="u44_text" class="text " style="display:none; visibility: hidden">
-                <p></p>
-              </div>
-            </div>
-          </div>
+      <!-- Unnamed (椭圆) -->
+      <div id="u43" class="ax_default ellipse">
+        <img id="u43_img" class="img " src="images/display_1_default/u43.svg"/>
+        <div id="u43_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
-        <div id="u43_state1" class="panel_state" data-label="状态2" style="visibility: hidden;">
-          <div id="u43_state1_content" class="panel_state_content">
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u44" class="ax_default">
+        <div id="u44_state0" class="panel_state" data-label="状态1" style="">
+          <div id="u44_state0_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
             <div id="u45" class="ax_default _图像">
@@ -307,13 +303,65 @@
             </div>
           </div>
         </div>
-        <div id="u43_state2" class="panel_state" data-label="状态3" style="visibility: hidden;">
-          <div id="u43_state2_content" class="panel_state_content">
+        <div id="u44_state1" class="panel_state" data-label="状态2" style="visibility: hidden;">
+          <div id="u44_state1_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
             <div id="u46" class="ax_default _图像">
               <img id="u46_img" class="img " src="images/display_1_default/u46.gif"/>
               <div id="u46_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u44_state2" class="panel_state" data-label="状态3" style="visibility: hidden;">
+          <div id="u44_state2_content" class="panel_state_content">
+
+            <!-- Unnamed (图像) -->
+            <div id="u47" class="ax_default _图像">
+              <img id="u47_img" class="img " src="images/display_1_default/u47.gif"/>
+              <div id="u47_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u48" class="ax_default">
+        <div id="u48_state0" class="panel_state" data-label="状态1" style="">
+          <div id="u48_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (矩形) -->
+            <div id="u49" class="ax_default box_1">
+              <img id="u49_img" class="img " src="images/display_1_default/u49.svg"/>
+              <div id="u49_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u48_state1" class="panel_state" data-label="状态2" style="visibility: hidden;">
+          <div id="u48_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (图像) -->
+            <div id="u50" class="ax_default _图像">
+              <img id="u50_img" class="img " src="images/display_1_default/u50.gif"/>
+              <div id="u50_text" class="text " style="display:none; visibility: hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u48_state2" class="panel_state" data-label="状态3" style="visibility: hidden;">
+          <div id="u48_state2_content" class="panel_state_content">
+
+            <!-- Unnamed (图像) -->
+            <div id="u51" class="ax_default _图像">
+              <img id="u51_img" class="img " src="images/display_1_default/u50.gif"/>
+              <div id="u51_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
