--- a/display_2_default.html
+++ b/display_2_default.html
@@ -50,94 +50,102 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u52" class="ax_default box_1">
-        <div id="u52_div" class=""></div>
-        <div id="u52_text" class="text " style="display:none; visibility: hidden">
+      <div id="u36" class="ax_default box_1">
+        <div id="u36_div" class=""></div>
+        <div id="u36_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u53" class="ax_default label">
-        <div id="u53_div" class=""></div>
-        <div id="u53_text" class="text ">
+      <div id="u37" class="ax_default box_1">
+        <div id="u37_div" class=""></div>
+        <div id="u37_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u38" class="ax_default label">
+        <div id="u38_div" class=""></div>
+        <div id="u38_text" class="text ">
           <p><span>Default_默认状态</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u54" class="ax_default primary_button">
-        <div id="u54_div" class=""></div>
-        <div id="u54_text" class="text ">
+      <div id="u39" class="ax_default primary_button">
+        <div id="u39_div" class=""></div>
+        <div id="u39_text" class="text ">
           <p><span>电源键</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图像) -->
-      <div id="u55" class="ax_default _图像">
-        <img id="u55_img" class="img " src="images/off/u4.png"/>
-        <div id="u55_text" class="text " style="display:none; visibility: hidden">
+      <div id="u40" class="ax_default _图像">
+        <img id="u40_img" class="img " src="images/off/u4.png"/>
+        <div id="u40_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u56" class="ax_default _文本">
-        <div id="u56_div" class=""></div>
-        <div id="u56_text" class="text ">
+      <div id="u41" class="ax_default _文本">
+        <div id="u41_div" class=""></div>
+        <div id="u41_text" class="text ">
           <p><span>100</span></p>
         </div>
       </div>
 
       <!-- Unnamed (椭圆) -->
-      <div id="u57" class="ax_default ellipse">
-        <img id="u57_img" class="img " src="images/display_1_default/u43.svg"/>
-        <div id="u57_text" class="text " style="display:none; visibility: hidden">
+      <div id="u42" class="ax_default ellipse">
+        <img id="u42_img" class="img " src="images/display_1_default/u27.svg"/>
+        <div id="u42_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u58" class="ax_default primary_button">
-        <div id="u58_div" class=""></div>
-        <div id="u58_text" class="text ">
+      <div id="u43" class="ax_default primary_button">
+        <div id="u43_div" class=""></div>
+        <div id="u43_text" class="text ">
           <p><span>电量归零</span></p>
         </div>
       </div>
 
       <!-- Unnamed (动态面板) -->
-      <div id="u59" class="ax_default">
-        <div id="u59_state0" class="panel_state" data-label="状态1" style="">
-          <div id="u59_state0_content" class="panel_state_content">
+      <div id="u44" class="ax_default">
+        <div id="u44_state0" class="panel_state" data-label="状态1" style="">
+          <div id="u44_state0_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
-            <div id="u60" class="ax_default _图像">
-              <img id="u60_img" class="img " src="images/display_1_default/u45.gif"/>
-              <div id="u60_text" class="text " style="display:none; visibility: hidden">
+            <div id="u45" class="ax_default _图像">
+              <img id="u45_img" class="img " src="images/display_1_default/u29.gif"/>
+              <div id="u45_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u59_state1" class="panel_state" data-label="状态2" style="visibility: hidden;">
-          <div id="u59_state1_content" class="panel_state_content">
+        <div id="u44_state1" class="panel_state" data-label="状态2" style="visibility: hidden;">
+          <div id="u44_state1_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
-            <div id="u61" class="ax_default _图像">
-              <img id="u61_img" class="img " src="images/display_1_default/u46.gif"/>
-              <div id="u61_text" class="text " style="display:none; visibility: hidden">
+            <div id="u46" class="ax_default _图像">
+              <img id="u46_img" class="img " src="images/display_1_default/u30.gif"/>
+              <div id="u46_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u59_state2" class="panel_state" data-label="状态3" style="visibility: hidden;">
-          <div id="u59_state2_content" class="panel_state_content">
+        <div id="u44_state2" class="panel_state" data-label="状态3" style="visibility: hidden;">
+          <div id="u44_state2_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
-            <div id="u62" class="ax_default _图像">
-              <img id="u62_img" class="img " src="images/display_1_default/u47.gif"/>
-              <div id="u62_text" class="text " style="display:none; visibility: hidden">
+            <div id="u47" class="ax_default _图像">
+              <img id="u47_img" class="img " src="images/display_1_default/u31.gif"/>
+              <div id="u47_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
@@ -146,66 +154,66 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u63" class="ax_default primary_button">
-        <div id="u63_div" class=""></div>
-        <div id="u63_text" class="text ">
+      <div id="u48" class="ax_default primary_button">
+        <div id="u48_div" class=""></div>
+        <div id="u48_text" class="text ">
           <p><span>输出</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u64" class="ax_default primary_button">
-        <div id="u64_div" class=""></div>
-        <div id="u64_text" class="text ">
+      <div id="u49" class="ax_default primary_button">
+        <div id="u49_div" class=""></div>
+        <div id="u49_text" class="text ">
           <p><span>输入</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u65" class="ax_default primary_button">
-        <div id="u65_div" class=""></div>
-        <div id="u65_text" class="text ">
+      <div id="u50" class="ax_default primary_button">
+        <div id="u50_div" class=""></div>
+        <div id="u50_text" class="text ">
           <p><span>电量充满</span></p>
         </div>
       </div>
 
       <!-- Unnamed (动态面板) -->
-      <div id="u66" class="ax_default">
-        <div id="u66_state0" class="panel_state" data-label="状态1" style="">
-          <div id="u66_state0_content" class="panel_state_content">
+      <div id="u51" class="ax_default">
+        <div id="u51_state0" class="panel_state" data-label="状态1" style="">
+          <div id="u51_state0_content" class="panel_state_content">
           </div>
         </div>
-        <div id="u66_state1" class="panel_state" data-label="in" style="visibility: hidden;">
-          <div id="u66_state1_content" class="panel_state_content">
+        <div id="u51_state1" class="panel_state" data-label="in" style="visibility: hidden;">
+          <div id="u51_state1_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u67" class="ax_default _标题_2">
-              <div id="u67_div" class=""></div>
-              <div id="u67_text" class="text ">
+            <div id="u52" class="ax_default _标题_2">
+              <div id="u52_div" class=""></div>
+              <div id="u52_text" class="text ">
                 <p><span>Input</span></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u66_state2" class="panel_state" data-label="out" style="visibility: hidden;">
-          <div id="u66_state2_content" class="panel_state_content">
+        <div id="u51_state2" class="panel_state" data-label="out" style="visibility: hidden;">
+          <div id="u51_state2_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u68" class="ax_default _标题_2">
-              <div id="u68_div" class=""></div>
-              <div id="u68_text" class="text ">
+            <div id="u53" class="ax_default _标题_2">
+              <div id="u53_div" class=""></div>
+              <div id="u53_text" class="text ">
                 <p><span>Output</span></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u66_state3" class="panel_state" data-label="pass" style="visibility: hidden;">
-          <div id="u66_state3_content" class="panel_state_content">
+        <div id="u51_state3" class="panel_state" data-label="pass" style="visibility: hidden;">
+          <div id="u51_state3_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u69" class="ax_default _标题_2">
-              <div id="u69_div" class=""></div>
-              <div id="u69_text" class="text ">
+            <div id="u54" class="ax_default _标题_2">
+              <div id="u54_div" class=""></div>
+              <div id="u54_text" class="text ">
                 <p><span>Pass Through</span></p>
               </div>
             </div>
@@ -214,58 +222,58 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u70" class="ax_default primary_button">
-        <div id="u70_div" class=""></div>
-        <div id="u70_text" class="text ">
+      <div id="u55" class="ax_default primary_button">
+        <div id="u55_div" class=""></div>
+        <div id="u55_text" class="text ">
           <p><span>边充边放</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u71" class="ax_default primary_button">
-        <div id="u71_div" class=""></div>
-        <div id="u71_text" class="text ">
+      <div id="u56" class="ax_default primary_button">
+        <div id="u56_div" class=""></div>
+        <div id="u56_text" class="text ">
           <p><span>默认</span></p>
         </div>
       </div>
 
       <!-- Unnamed (动态面板) -->
-      <div id="u72" class="ax_default">
-        <div id="u72_state0" class="panel_state" data-label="状态1" style="">
-          <div id="u72_state0_content" class="panel_state_content">
+      <div id="u57" class="ax_default">
+        <div id="u57_state0" class="panel_state" data-label="状态1" style="">
+          <div id="u57_state0_content" class="panel_state_content">
           </div>
         </div>
-        <div id="u72_state1" class="panel_state" data-label="in" style="visibility: hidden;">
-          <div id="u72_state1_content" class="panel_state_content">
+        <div id="u57_state1" class="panel_state" data-label="in" style="visibility: hidden;">
+          <div id="u57_state1_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
-            <div id="u73" class="ax_default _图像">
-              <img id="u73_img" class="img " src="images/display_1_default/u50.gif"/>
-              <div id="u73_text" class="text " style="display:none; visibility: hidden">
+            <div id="u58" class="ax_default _图像">
+              <img id="u58_img" class="img " src="images/display_1_default/u34.gif"/>
+              <div id="u58_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u72_state2" class="panel_state" data-label="out" style="visibility: hidden;">
-          <div id="u72_state2_content" class="panel_state_content">
+        <div id="u57_state2" class="panel_state" data-label="out" style="visibility: hidden;">
+          <div id="u57_state2_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
-            <div id="u74" class="ax_default _图像">
-              <img id="u74_img" class="img " src="images/display_1_default/u50.gif"/>
-              <div id="u74_text" class="text " style="display:none; visibility: hidden">
+            <div id="u59" class="ax_default _图像">
+              <img id="u59_img" class="img " src="images/display_1_default/u34.gif"/>
+              <div id="u59_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u72_state3" class="panel_state" data-label="状态2" style="visibility: hidden;">
-          <div id="u72_state3_content" class="panel_state_content">
+        <div id="u57_state3" class="panel_state" data-label="状态2" style="visibility: hidden;">
+          <div id="u57_state3_content" class="panel_state_content">
 
             <!-- Unnamed (图像) -->
-            <div id="u75" class="ax_default _图像">
-              <img id="u75_img" class="img " src="images/display_2_default/u75.gif"/>
-              <div id="u75_text" class="text " style="display:none; visibility: hidden">
+            <div id="u60" class="ax_default _图像">
+              <img id="u60_img" class="img " src="images/display_2_default/u60.gif"/>
+              <div id="u60_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
