--- a/display_2_default.html
+++ b/display_2_default.html
@@ -280,6 +280,14 @@
           </div>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u61" class="ax_default _文本">
+        <div id="u61_div" class=""></div>
+        <div id="u61_text" class="text ">
+          <p><span>%</span></p>
+        </div>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
